--- a/Presentations/images/holobench.graffle/data.plist
+++ b/Presentations/images/holobench.graffle/data.plist
@@ -7,7 +7,7 @@
 	<key>ApplicationVersion</key>
 	<array>
 		<string>com.omnigroup.OmniGrafflePro</string>
-		<string>129.12</string>
+		<string>129.15</string>
 	</array>
 	<key>AutoAdjust</key>
 	<true/>
@@ -937,12 +937,36 @@
 					<key>Color</key>
 					<dict>
 						<key>b</key>
+						<string>0.387274</string>
+						<key>g</key>
+						<string>0.813245</string>
+						<key>r</key>
+						<string>0.974136</string>
+					</dict>
+					<key>FillType</key>
+					<integer>2</integer>
+					<key>GradientAngle</key>
+					<real>90</real>
+					<key>GradientColor</key>
+					<dict>
+						<key>b</key>
 						<string>0.184314</string>
 						<key>g</key>
 						<string>0.576471</string>
 						<key>r</key>
 						<string>0.752941</string>
 					</dict>
+					<key>MiddleColor</key>
+					<dict>
+						<key>b</key>
+						<string>0.184314</string>
+						<key>g</key>
+						<string>0.576471</string>
+						<key>r</key>
+						<string>0.752941</string>
+					</dict>
+					<key>TrippleBlend</key>
+					<string>YES</string>
 				</dict>
 				<key>shadow</key>
 				<dict>
@@ -1286,12 +1310,36 @@ viewport \{...\}}</string>
 					<key>Color</key>
 					<dict>
 						<key>b</key>
+						<string>0.387274</string>
+						<key>g</key>
+						<string>0.813245</string>
+						<key>r</key>
+						<string>0.974136</string>
+					</dict>
+					<key>FillType</key>
+					<integer>2</integer>
+					<key>GradientAngle</key>
+					<real>90</real>
+					<key>GradientColor</key>
+					<dict>
+						<key>b</key>
 						<string>0.184314</string>
 						<key>g</key>
 						<string>0.576471</string>
 						<key>r</key>
 						<string>0.752941</string>
 					</dict>
+					<key>MiddleColor</key>
+					<dict>
+						<key>b</key>
+						<string>0.184314</string>
+						<key>g</key>
+						<string>0.576471</string>
+						<key>r</key>
+						<string>0.752941</string>
+					</dict>
+					<key>TrippleBlend</key>
+					<string>YES</string>
 				</dict>
 				<key>shadow</key>
 				<dict>
@@ -1356,12 +1404,36 @@ viewport \{...\}}</string>
 					<key>Color</key>
 					<dict>
 						<key>b</key>
+						<string>0.387274</string>
+						<key>g</key>
+						<string>0.813245</string>
+						<key>r</key>
+						<string>0.974136</string>
+					</dict>
+					<key>FillType</key>
+					<integer>2</integer>
+					<key>GradientAngle</key>
+					<real>90</real>
+					<key>GradientColor</key>
+					<dict>
+						<key>b</key>
 						<string>0.184314</string>
 						<key>g</key>
 						<string>0.576471</string>
 						<key>r</key>
 						<string>0.752941</string>
 					</dict>
+					<key>MiddleColor</key>
+					<dict>
+						<key>b</key>
+						<string>0.184314</string>
+						<key>g</key>
+						<string>0.576471</string>
+						<key>r</key>
+						<string>0.752941</string>
+					</dict>
+					<key>TrippleBlend</key>
+					<string>YES</string>
 				</dict>
 				<key>shadow</key>
 				<dict>
@@ -1426,12 +1498,36 @@ viewport \{...\}}</string>
 					<key>Color</key>
 					<dict>
 						<key>b</key>
+						<string>0.387274</string>
+						<key>g</key>
+						<string>0.813245</string>
+						<key>r</key>
+						<string>0.974136</string>
+					</dict>
+					<key>FillType</key>
+					<integer>2</integer>
+					<key>GradientAngle</key>
+					<real>90</real>
+					<key>GradientColor</key>
+					<dict>
+						<key>b</key>
 						<string>0.184314</string>
 						<key>g</key>
 						<string>0.576471</string>
 						<key>r</key>
 						<string>0.752941</string>
 					</dict>
+					<key>MiddleColor</key>
+					<dict>
+						<key>b</key>
+						<string>0.184314</string>
+						<key>g</key>
+						<string>0.576471</string>
+						<key>r</key>
+						<string>0.752941</string>
+					</dict>
+					<key>TrippleBlend</key>
+					<string>YES</string>
 				</dict>
 				<key>shadow</key>
 				<dict>
@@ -1497,12 +1593,36 @@ viewport \{...\}}</string>
 					<key>Color</key>
 					<dict>
 						<key>b</key>
+						<string>0.387274</string>
+						<key>g</key>
+						<string>0.813245</string>
+						<key>r</key>
+						<string>0.974136</string>
+					</dict>
+					<key>FillType</key>
+					<integer>2</integer>
+					<key>GradientAngle</key>
+					<real>90</real>
+					<key>GradientColor</key>
+					<dict>
+						<key>b</key>
 						<string>0.184314</string>
 						<key>g</key>
 						<string>0.576471</string>
 						<key>r</key>
 						<string>0.752941</string>
 					</dict>
+					<key>MiddleColor</key>
+					<dict>
+						<key>b</key>
+						<string>0.184314</string>
+						<key>g</key>
+						<string>0.576471</string>
+						<key>r</key>
+						<string>0.752941</string>
+					</dict>
+					<key>TrippleBlend</key>
+					<string>YES</string>
 				</dict>
 				<key>shadow</key>
 				<dict>
@@ -1732,12 +1852,36 @@ viewport \{...\}}</string>
 					<key>Color</key>
 					<dict>
 						<key>b</key>
+						<string>0.641794</string>
+						<key>g</key>
+						<string>0.498985</string>
+						<key>r</key>
+						<string>0.366537</string>
+					</dict>
+					<key>FillType</key>
+					<integer>2</integer>
+					<key>GradientAngle</key>
+					<real>90</real>
+					<key>GradientColor</key>
+					<dict>
+						<key>b</key>
 						<string>0.4</string>
 						<key>g</key>
 						<string>0.305882</string>
 						<key>r</key>
 						<string>0.207843</string>
 					</dict>
+					<key>MiddleColor</key>
+					<dict>
+						<key>b</key>
+						<string>0.4</string>
+						<key>g</key>
+						<string>0.305882</string>
+						<key>r</key>
+						<string>0.207843</string>
+					</dict>
+					<key>TrippleBlend</key>
+					<string>YES</string>
 				</dict>
 				<key>shadow</key>
 				<dict>
@@ -1805,12 +1949,36 @@ wall \{ ... \}}</string>
 					<key>Color</key>
 					<dict>
 						<key>b</key>
+						<string>0.641794</string>
+						<key>g</key>
+						<string>0.498985</string>
+						<key>r</key>
+						<string>0.366537</string>
+					</dict>
+					<key>FillType</key>
+					<integer>2</integer>
+					<key>GradientAngle</key>
+					<real>90</real>
+					<key>GradientColor</key>
+					<dict>
+						<key>b</key>
 						<string>0.4</string>
 						<key>g</key>
 						<string>0.305882</string>
 						<key>r</key>
 						<string>0.207843</string>
 					</dict>
+					<key>MiddleColor</key>
+					<dict>
+						<key>b</key>
+						<string>0.4</string>
+						<key>g</key>
+						<string>0.305882</string>
+						<key>r</key>
+						<string>0.207843</string>
+					</dict>
+					<key>TrippleBlend</key>
+					<string>YES</string>
 				</dict>
 				<key>shadow</key>
 				<dict>
@@ -1878,12 +2046,36 @@ wall \{ ... \}}</string>
 					<key>Color</key>
 					<dict>
 						<key>b</key>
+						<string>0.641794</string>
+						<key>g</key>
+						<string>0.498985</string>
+						<key>r</key>
+						<string>0.366537</string>
+					</dict>
+					<key>FillType</key>
+					<integer>2</integer>
+					<key>GradientAngle</key>
+					<real>90</real>
+					<key>GradientColor</key>
+					<dict>
+						<key>b</key>
 						<string>0.4</string>
 						<key>g</key>
 						<string>0.305882</string>
 						<key>r</key>
 						<string>0.207843</string>
 					</dict>
+					<key>MiddleColor</key>
+					<dict>
+						<key>b</key>
+						<string>0.4</string>
+						<key>g</key>
+						<string>0.305882</string>
+						<key>r</key>
+						<string>0.207843</string>
+					</dict>
+					<key>TrippleBlend</key>
+					<string>YES</string>
 				</dict>
 				<key>shadow</key>
 				<dict>
@@ -2326,12 +2518,36 @@ eye [ LEFT RIGHT ]}</string>
 					<key>Color</key>
 					<dict>
 						<key>b</key>
+						<string>0.454139</string>
+						<key>g</key>
+						<string>0.444465</string>
+						<key>r</key>
+						<string>0.793606</string>
+					</dict>
+					<key>FillType</key>
+					<integer>2</integer>
+					<key>GradientAngle</key>
+					<real>90</real>
+					<key>GradientColor</key>
+					<dict>
+						<key>b</key>
 						<string>0.290196</string>
 						<key>g</key>
 						<string>0.27451</string>
 						<key>r</key>
 						<string>0.54902</string>
 					</dict>
+					<key>MiddleColor</key>
+					<dict>
+						<key>b</key>
+						<string>0.290196</string>
+						<key>g</key>
+						<string>0.27451</string>
+						<key>r</key>
+						<string>0.54902</string>
+					</dict>
+					<key>TrippleBlend</key>
+					<string>YES</string>
 				</dict>
 				<key>shadow</key>
 				<dict>
@@ -2547,7 +2763,7 @@ eye [ LEFT RIGHT ]}</string>
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2007-08-19 16:14:04 +0200</string>
+	<string>2007-09-21 19:31:37 +0200</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
