--- a/Presentations/images/ML.graffle/data.plist
+++ b/Presentations/images/ML.graffle/data.plist
@@ -4,6 +4,11 @@
 <dict>
 	<key>ActiveLayerIndex</key>
 	<integer>0</integer>
+	<key>ApplicationVersion</key>
+	<array>
+		<string>com.omnigroup.OmniGrafflePro</string>
+		<string>129.15</string>
+	</array>
 	<key>AutoAdjust</key>
 	<false/>
 	<key>CanvasColor</key>
@@ -68,23 +73,54 @@
 					<key>Color</key>
 					<dict>
 						<key>b</key>
+						<string>0.454139</string>
+						<key>g</key>
+						<string>0.444465</string>
+						<key>r</key>
+						<string>0.793606</string>
+					</dict>
+					<key>FillType</key>
+					<integer>2</integer>
+					<key>GradientAngle</key>
+					<real>90</real>
+					<key>GradientColor</key>
+					<dict>
+						<key>b</key>
 						<string>0.290196</string>
 						<key>g</key>
 						<string>0.27451</string>
 						<key>r</key>
 						<string>0.54902</string>
 					</dict>
+					<key>MiddleColor</key>
+					<dict>
+						<key>b</key>
+						<string>0.290196</string>
+						<key>g</key>
+						<string>0.27451</string>
+						<key>r</key>
+						<string>0.54902</string>
+					</dict>
+					<key>TrippleBlend</key>
+					<string>YES</string>
+				</dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
 				</dict>
 				<key>stroke</key>
 				<dict>
 					<key>CornerRadius</key>
-					<real>5</real>
+					<real>4</real>
 				</dict>
 			</dict>
 			<key>Text</key>
 			<dict>
+				<key>Pad</key>
+				<integer>3</integer>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf410
+				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
 {\fonttbl\f0\fswiss\fcharset77 Helvetica-Bold;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
@@ -131,17 +167,46 @@
 					<key>Color</key>
 					<dict>
 						<key>b</key>
+						<string>0.387274</string>
+						<key>g</key>
+						<string>0.813245</string>
+						<key>r</key>
+						<string>0.974136</string>
+					</dict>
+					<key>FillType</key>
+					<integer>2</integer>
+					<key>GradientAngle</key>
+					<real>90</real>
+					<key>GradientColor</key>
+					<dict>
+						<key>b</key>
 						<string>0.184314</string>
 						<key>g</key>
 						<string>0.576471</string>
 						<key>r</key>
 						<string>0.752941</string>
 					</dict>
+					<key>MiddleColor</key>
+					<dict>
+						<key>b</key>
+						<string>0.184314</string>
+						<key>g</key>
+						<string>0.576471</string>
+						<key>r</key>
+						<string>0.752941</string>
+					</dict>
+					<key>TrippleBlend</key>
+					<string>YES</string>
+				</dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
 				</dict>
 				<key>stroke</key>
 				<dict>
 					<key>CornerRadius</key>
-					<real>5</real>
+					<real>4</real>
 				</dict>
 			</dict>
 			<key>Text</key>
@@ -149,12 +214,12 @@
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf410
+				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
 {\fonttbl\f0\fswiss\fcharset77 Helvetica-Bold;}
-{\colortbl;\red255\green255\blue255;\red255\green255\blue255;}
+{\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
-\f0\b\fs24 \cf2 EYE}</string>
+\f0\b\fs24 \cf1 EYE}</string>
 			</dict>
 		</dict>
 		<dict>
@@ -196,28 +261,59 @@
 					<key>Color</key>
 					<dict>
 						<key>b</key>
+						<string>0.454139</string>
+						<key>g</key>
+						<string>0.444465</string>
+						<key>r</key>
+						<string>0.793606</string>
+					</dict>
+					<key>FillType</key>
+					<integer>2</integer>
+					<key>GradientAngle</key>
+					<real>90</real>
+					<key>GradientColor</key>
+					<dict>
+						<key>b</key>
 						<string>0.290196</string>
 						<key>g</key>
 						<string>0.27451</string>
 						<key>r</key>
 						<string>0.54902</string>
 					</dict>
+					<key>MiddleColor</key>
+					<dict>
+						<key>b</key>
+						<string>0.290196</string>
+						<key>g</key>
+						<string>0.27451</string>
+						<key>r</key>
+						<string>0.54902</string>
+					</dict>
+					<key>TrippleBlend</key>
+					<string>YES</string>
+				</dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
 				</dict>
 				<key>stroke</key>
 				<dict>
 					<key>CornerRadius</key>
-					<real>5</real>
+					<real>4</real>
 				</dict>
 			</dict>
 			<key>Text</key>
 			<dict>
+				<key>Pad</key>
+				<integer>3</integer>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf410
+				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
 {\fonttbl\f0\fswiss\fcharset77 Helvetica-Bold;}
-{\colortbl;\red255\green255\blue255;\red255\green255\blue255;}
+{\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
-\f0\b\fs24 \cf2 DB}</string>
+\f0\b\fs24 \cf1 DB}</string>
 			</dict>
 		</dict>
 		<dict>
@@ -375,7 +471,7 @@
 			<real>-1</real>
 			<key>Points</key>
 			<array>
-				<string>{354.3, 255.18}</string>
+				<string>{354.299, 255.18}</string>
 				<string>{396.85, 269.291}</string>
 			</array>
 			<key>Style</key>
@@ -418,7 +514,7 @@
 			<real>-1</real>
 			<key>Points</key>
 			<array>
-				<string>{411.493, 283.465}</string>
+				<string>{411.492, 283.464}</string>
 				<string>{453.543, 283.465}</string>
 			</array>
 			<key>Style</key>
@@ -461,8 +557,8 @@
 			<real>-1</real>
 			<key>Points</key>
 			<array>
-				<string>{354.3, 311.749}</string>
-				<string>{396.85, 297.638}</string>
+				<string>{354.299, 311.748}</string>
+				<string>{396.85, 297.637}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -504,8 +600,8 @@
 			<real>-1</real>
 			<key>Points</key>
 			<array>
-				<string>{340.158, 353.831}</string>
-				<string>{340.157, 325.922}</string>
+				<string>{340.158, 354.331}</string>
+				<string>{340.157, 325.921}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -548,7 +644,7 @@
 			<key>Points</key>
 			<array>
 				<string>{155.906, 354.331}</string>
-				<string>{326.015, 311.749}</string>
+				<string>{326.015, 311.748}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -592,8 +688,8 @@
 			<real>-1</real>
 			<key>Points</key>
 			<array>
-				<string>{340.158, 213.099}</string>
-				<string>{340.158, 241.007}</string>
+				<string>{340.158, 212.599}</string>
+				<string>{340.157, 241.007}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -798,7 +894,7 @@
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2006-10-06 11:43:04 +0200</string>
+	<string>2007-09-21 19:35:25 +0200</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
@@ -883,25 +979,17 @@
 	<key>WindowInfo</key>
 	<dict>
 		<key>CurrentSheet</key>
-		<string>0</string>
-		<key>DrawerOpen</key>
-		<false/>
+		<integer>0</integer>
 		<key>DrawerTab</key>
 		<string>Outline</string>
 		<key>DrawerWidth</key>
 		<real>209</real>
-		<key>FitInWindow</key>
-		<false/>
 		<key>Frame</key>
 		<string>{{431, 103}, {574, 746}}</string>
-		<key>ShowRuler</key>
-		<false/>
-		<key>ShowStatusBar</key>
-		<true/>
 		<key>VisibleRegion</key>
-		<string>{{4.33333e-06, 40.8945}, {635, 736.1}}</string>
+		<string>{{0, 40.8945}, {635, 736.1}}</string>
 		<key>Zoom</key>
-		<string>1</string>
+		<real>1</real>
 	</dict>
 </dict>
 </plist>
